# SPES_Transformer

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
data/: subjects.txt
notebooks/: BIEN.mplstyle  google-drive-template.ipynb  testing.ipynb
src/: utils.py
src/analysis/: README.md  plot_pathway_results.py  test_pathway_importance.py
src/config/: default.yaml  tune.yaml
src/datasets/: seeg_dataset.py
src/models/: model.py  multi_scale_ori.py
src/preprocess/: process.py  process_subject.py
src/training/: evaluate.py  train.py  train_accre.slurm  tune.py
supplemental_analysis/: Baseline_results_final_seed_1.csv  Fusion_results_final_seed_1.csv  Patient_Cohort_and_Noise_Analysis.ipynb  outcomes.csv  pathway_importance_20251205_164827.csv
