[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spes-transformer"
version = "0.1.0"
description = "Deep learning framework for identifying seizure-onset zone electrodes from SPES data"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Price Withers", email = "christopher.p.withers@vanderbilt.edu"}
]
keywords = ["epilepsy", "SPES", "SEEG", "deep learning", "transformer", "seizure onset zone"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "torch>=2.0.0",
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "pyyaml>=5.4.0",
    "loguru>=0.6.0",
    "nibabel>=3.2.0",
    "mat73>=0.59",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "scikit-learn>=1.0.0",
    "mne>=1.0.0",
    "tqdm>=4.60.0",
    "torcheeg>=1.0.0",
    "tensorboard>=2.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "isort>=5.10.0",
    "mypy>=0.950",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/witherscp/SPES_Transformer"
Documentation = "https://github.com/witherscp/SPES_Transformer/blob/main/README.md"
Repository = "https://github.com/witherscp/SPES_Transformer"
"Bug Tracker" = "https://github.com/witherscp/SPES_Transformer/issues"

[project.scripts]
spes-preprocess = "src.preprocess.process_subject:main"
spes-train = "src.training.train:main"
spes-evaluate = "src.training.evaluate:main"

[tool.setuptools]
packages = ["src", "src.config", "src.datasets", "src.models", "src.preprocess", "src.training"]

[tool.setuptools.package-data]
src = ["config/*.yaml"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=src",
    "--cov-report=html",
    "--cov-report=term-missing",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true